k8s/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: hello-kubernetes
spec:
  replicas: 0
  selector:
    matchLabels:
      app: hello-kubernetes
  template:
    metadata:
      labels:
        app: hello-kubernetes
    spec:
      containers:
      - name: hello-kubernetes
        image: docker.repo.schwarz/paulbouwer/hello-kubernetes:1.8
        ports:
        - containerPort: 8080
      resources:
---
apiVersion: route.openshift.io/v1
kind: Route
metadata:
  name: hello-kubernetes
spec:
  host: hello-kubernetes-am-testspace.app-t01.cmpf.schwarz
  tls:
    termination: edge
  to:
    kind: Service
    name: hello-kubernetes
    weight: 100
status:
---
apiVersion: v1
kind: Service
metadata:
  name: hello-kubernetes
spec:
  type: ClusterIP
  ports:
  - port: 80
    targetPort: 8080
  selector:
    app: hello-kubernetes
