k8s/route.yaml
apiVersion: route.openshift.io/v1
kind: Route
metadata:
  name: hello-kubernetes
spec:
  host: hello-kubernetes-am-testspace.app-t01.cmpf.schwarz
  tls:
    termination: edge
  to:
    kind: Service
    name: hello-kubernetes
    weight: 100
status:
